[package]
name = "euler"
version = "0.1.0"
authors = ["Morgan Harold Bauer <bauer.morgan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Each problem has been designed according to a "one-minute rule", which means that although it may take several hours to design a successful algorithm with more difficult problems, an efficient implementation will allow a solution to be obtained on a modestly powered computer in less than one minute.

[lib]
name = "math"
path = "src/math.rs"

[dependencies]


[dev-dependencies]
criterion = "0.3"



[[bench]]
name = "1"
harness = false